manifest/v1-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiv1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiv1
  template:
    metadata:
      labels:
        app: apiv1
    spec:
      containers:
      - image: mdfarhaan/k8_apiv1
        name: apiv1

---
apiVersion: v1
kind: Service
metadata:
  name: apiv1-service
spec:
  selector:
    app: apiv1
  ports:
  - protocol: TCP
    port: 3000
    targetPort: 3000
