manifest/v2-deployments.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: apiv2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: apiv2
  template:
    metadata:
      labels:
        app: apiv2
    spec:
      containers:
      - image: mdfarhaan/k8_apiv2
        name: apiv2

---
apiVersion: v1
kind: Service
metadata:
  name: apiv2-service
spec:
  selector:
    app: apiv2
  ports:
  - protocol: TCP
    port: 3001
    targetPort: 3001
